--- a/opm/templates/home/doctorBody.html
+++ b/opm/templates/home/doctorBody.html
@@ -35,7 +35,7 @@
 
                 </div>
 
-                <div class="col s4 m4 l4 center teal lighten-2" style="padding: 30px 20px 20px 20px;">
+                <div class="col s6 center teal lighten-2" style="padding: 30px 20px 20px 20px;">
 
                     <a href="{% url 'viewassignedpatients'%}"><img class="responsive-image" src="{% static 'img/viewlistofusers.png' %}" height="200px;"/></a>
                     <div class="section"></div>
@@ -46,27 +46,14 @@
 
                 </div>
 
-                <div class="col s4 m4 l4 center teal lighten-3" style="padding: 30px 20px 20px 20px;">
+                <div class="col s6 center teal lighten-3" style="padding: 30px 20px 20px 20px;">
 
-                    <a href="{% url 'changerecordinginterval' %}"><img class="responsive-image" src="{% static 'img/changeinterval.PNG' %}" height="200px;"/></a>
+                    <a href="{% url 'managedevicerecording' %}"><img class="responsive-image" src="{% static 'img/manageDeviceRecords.png' %}" height="200px;"/></a>
                     <div class="section"></div>
-                    <h6 id="greeting">Change Recording Interval</h6>
+                    <h6 id="greeting">Manage Device Recording</h6>
                     <p align="justify">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sollicitudin facilisis turpis, id rhoncus magna fermentum sed. Nunc vel venenatis mauris.
                     </p>
-
-
-                </div>
-
-                <div class="col s4 m4 l4 center teal lighten-4" style="padding: 30px 20px 20px 20px;">
-
-                    <a href="{% url 'stoprecording' %}"><img class="responsive-image" src="{% static 'img/stoprecord.PNG' %}" height="200px;"/></a>
-                    <div class="section"></div>
-                    <h6 id="greeting">Stop Recording</h6>
-                    <p align="justify">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sollicitudin facilisis turpis, id rhoncus magna fermentum sed. Nunc vel venenatis mauris.
-                    </p>
-
                 </div>
 
         </div>
