--- a/opm/templates/patientmedicalinfo/patientMedicalInfo.html
+++ b/opm/templates/patientmedicalinfo/patientMedicalInfo.html
@@ -5,7 +5,12 @@
         <!------------------------------------------------------- BODY STARTS HERE ------------------------------------------------------------->
     <div class="col s12 white">
             <div class="col s12 m12 l12 center white">
-            <a href="{% url 'viewassignedpatients' %}">Back</a>
+                {% if pagefrom == 1 %}
+                    <a href="{% url 'viewassignedpatients' %}">Back</a>
+                {% else %}
+                    <a href="{% url 'patientrecords' patient.patientid %}">Back</a>
+                {% endif %}
+
 
                 <div class="section"></div>
 
@@ -16,14 +21,14 @@
                 <div class="section"></div>
 
             </div>
+
             <div class="col s12 m12 l12  white" style="padding: 0px 70px 0px 70px">
 
                 <div class="row">
 
                     <div class="col s12 green lighten-4" style="border: 1px solid #e0f2f1; padding: 2%;">
-
                        <div class="col s2">
-                           <b>Date:</b> {{ patientmedicalinfo.date }}
+                           <b>Date:</b> {{ patientmedicalinfo.date|date:"F j, Y" }}
                        </div>
                        <div class="col s6 center">
                            <b>Patient's Name:</b> {{ patient.userid.auth_user_id.first_name }} {{ patient.userid.middlename}} {{ patient.userid.auth_user_id.last_name }}
