--- a/opm/templates/viewhistoryofvitals/viewHistoryOfVitals.html
+++ b/opm/templates/viewhistoryofvitals/viewHistoryOfVitals.html
@@ -9,53 +9,159 @@
                 <div class="section"></div>
                 <div class="col s3"></div>
                 <div class="col s6">
-                    <h3 id="greeting"><i class="material-icons" style="font-size: 40px;">list</i>&nbsp;&nbsp; History of Vitals</h3>
+                    <h3 id="greeting"><i class="material-icons" style="font-size: 40px;">list</i>&nbsp;&nbsp; History of Records</h3>
+                    Medical history and past recorded vitals of the patient.
                 </div>
-                <div class="col s3" style ="padding: 0px 40px 0px 20px">
-                    <form>
-                        <div class="input-field grey">
-                          <input id="search" type="search" required>
-                          <label class="label-icon" for="search"><i class="material-icons" id="searchIcon">search</i></label>
-                          <i class="material-icons">close</i>
-                        </div>
-                      </form>
-                </div>
+                <div class="col s3"></div>
             </div>
             <div class="section"></div>
             <div class="divider"></div>
             <div class="section"></div>
 
         </div>
-        <div class="col s12 m12 l12 white" style="padding: 0px 20px 0px 30px">
-            <div class="row">
-                <div class="col s4 m4 l4">
-                    <h5>Search by Date</h5>
-                    <label>
-                        <input placeholder="Ex: Jun 16, 2005" id = "day" type="text" class="datepicker">
-                        <span>Enter Date</span>
-                    </label>
+            <div class="white" style="padding: 0px 20px 0px 30px">
+                <div class="row center">
+                    <div class="col s6">
+                        <H5>Search for:</H5><br/>
+                        <p>
+                          <label>
+                            <input class="with-gap" name="group1" id="0" type="radio"  />
+                            <span>Medical Forms</span>
+                          </label>&nbsp;&nbsp;&nbsp;
+                          <label>
+                            <input class="with-gap" name="group1" id="1" type="radio"  />
+                            <span>Past Vital Records</span>
+                          </label>
+                        </p>
+                    </div>
+                    <div class ="col s6">
+                        <H5>Search by:</H5>
+                        <div id="selectDateMonthYear">
+                            <br />
+                            <div class="col s3"></div>
+                            <select class="browser-default center col s6" id="typeofSearch">
+                                <option value="" disabled selected>Choose by Date or Month and Year</option>
+                                <option value="date">Search by date</option>
+                                <option value="month">Search by month and year</option>
+                                <option value="year">Search by year</option>
+                                <!--<option value="year">Search by year</option>-->
+                            </select>
+                            <div class="col s3"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col s4">
-                    <h5>Search by Month and Year</h5>
-                    <label>
-                        <input placeholder="Ex: Jun 2005" id = "day" type="text" class="datepicker">
-                        <span>Enter Date</span>
-                    </label>
+
+                <div class="row center">
+                    <div id="date" class="optionx date" style="display: none;">
+                        <h5>Search by Date</h5>
+                        <label>
+                            <input id = "day" type="date" style="width:35%;" class="dateonly">
+                            <br /><span>Enter Date</span>
+                        </label>
+                    </div>
+                    <div id="month" class="optionx month" style="display: none;">
+                        <h5>Search by Month and Year</h5>
+                        <label>
+                            <input id = "monthandyear" type="month" style="width:35%; height:8%;">
+                            <br /><span>Enter Date</span>
+                        </label>
+                    </div>
+                    <div id="year" class="optionx year" style="display: none;"><center>
+                        <h5>Search by Year</h5>
+                        <label>
+                            <select id = "year" type="text" class="browser-default" style="width:35%;"></select>
+                            <br /><span>Enter Date</span>
+                        </label></center>
+                    </div>
                 </div>
-                <div class="col s4">
-                    <h5>Search by Year</h5>
-                    <label>
-                        <input placeholder="Ex: Jun 16, 2005" id = "day" type="text" class="datepicker">
-                        <span>Enter Date</span>
-                    </label>
+                <div class='row center'>
+                    <div class="col s5"></div>
+                        <button type='submit' name='btn_login' class='col s2 btn btn-large waves-effect'>Search</button>
+                    <div class="col s5"></div>
                 </div>
+                <div class="section"></div>
             </div>
-            <div class='row center'>
-                <div class="col s5"></div>
-                    <button type='submit' name='btn_login' class='col s2 btn btn-large waves-effect'>Submit</button>
-                <div class="col s5"></div>
+
+    <div class="divider"></div>
+    <br>
+    <div class="col s12 white">
+
+            <div class ="row">
+
+                <div class="col s6" style="padding: 0px 30px 0px 30px">
+                    <center><b class="teal-text text-darken-2"><big><big>Medical Forms</big></big></b></center>
+                    <br />
+                    <table class="striped">
+
+                        <tr>
+
+                            <th>October 25, 2018</th>
+                            <td style="padding-right:3%;"><a class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+
+                        </tr>
+                        <tr>
+
+                            <th>October 27, 2018</th>
+                            <td style="padding-right:3%;"><a class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+
+                        </tr>
+                        <tr>
+
+                            <th>October 29, 2018</th>
+                            <td style="padding-right:3%;"><a class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+
+                        </tr>
+
+                    </table>
+
+                </div>
+
+                <div class="col s6" style="padding: 0px 30px 0px 30px">
+                    <center><b class="teal-text text-darken-2"><big><big>Past Vital Records</big></big></b></center>
+                    <br />
+                    <table class="striped">
+
+                        <tr>
+
+                            <th>October 25, 2018</th>
+                            <td style="padding-right:3%;"><a class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+
+                        </tr>
+                        <tr>
+
+                            <th>October 27, 2018</th>
+                            <td style="padding-right:3%;"><a class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+
+                        </tr>
+                        <tr>
+
+                            <th>October 29, 2018</th>
+                            <td style="padding-right:3%;"><a class="waves-effect waves-light btn right"><i class="material-icons left">pageview</i>View</a></td>
+
+                        </tr>
+
+                    </table>
+
+                </div>
+
             </div>
+
         </div>
+
+
+    <script>
+        $(function() {
+          $('#typeofSearch').change(function(){
+            $('.optionx').hide();
+            $('#' + $(this).val()).show();
+          });
+        });
+
+    $(document).ready(function(){
+        $('.sidenav').sidenav();
+    });
+
+    </script>
 
 
 {% endblock %}
